--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -273,13 +273,15 @@ CHAT relies on analysis of systemic tensions in activity and culture [@barab_usi
 
 #### Coding and analysis of video data
 
-To allow for a greater depth of analysis I opted to anaylse key game making sessions in greater detail rather than all ten in a more summative fashion.  
+To allow for a greater depth of analysis I opted to anaylse key game making sessions in greater detail rather than all ten in a more summative fashion. Thus to date I have
 
-In the last review I outlined that I am exploring alternatives to coding video data in the Nvivo software package due to its limitations in playing and reviewing video data and the large amount of video data I am dealing with . I have adopted a process for coding and describing section
+In the last review I outlined that I am exploring alternatives to coding video data in the Nvivo software package due to its limitations in playing and reviewing video data and the large amount of video data I am dealing with. I have adopted a process for coding and describing section which breaks video segments into 5 minute pieces and use a word document template to record notes which can later be imported into Nvivo for analysis.
+
+This process also allows me to use free software to syncronise and view video and data from pc capture and wider 360 captured footage.
 
 When coding I started with some preset codes from the literature for examples Barron and colleagues' on parent roles when helping digital projects [-@barron_parents_2009]. As coding progressed, I have modified and extended these roles into codes to better match my recorded data.
 
-I initially drew on on design stages, modes of interaction do guide coding. The coding structure is still being revised as I continue to analyse data.
+I also initially drew on design stages as a schema for coding. This proved useful mostly to highlight the .
 
 ### Commentary on chapter four - Emerging Learning Designs
 
@@ -311,7 +313,7 @@ The first section examines the impact of a process drama with an aim to establis
 In the discussion section, the chapter builds on material explored in this chapter in relation to exiting research to explore the development of agency in this learning design. Particular attention is given to processes which support learners to develop agency in the game making process and the role of different levels of authenticity within these processes.
 
 
-### Commentary on chapter six - The Use of Gameplay Design Patterns "It’s like a project in itself, really"
+4### Commentary on chapter six - The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
 Table of summary of use of GDPs.
 https://docs.google.com/document/d/1mbnV2pjT_7gq4Mcss8gQJ78avHktnA1P3HCJTkiJefk/edit
