--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -306,19 +306,15 @@ In addition, work to distinguish type of learner agency including transformative
 ### Overview of chapter five - Seeding and Nurturing Game Making Communities to Facilitate Learner Agency
 
 
-This chapter is concerned with examining the impact on participants of the learning design explored in the last chapter.
-
-- The first section examines the impact of a process drama with an aim to establish and nurture community practice. It highlights the value of introducing almost-real processes, near authentic tools and the possibility of learners developing learning identities within a drama frame.
-- the use of core tools in the initial learning design
-- community behaviour and design processes
-
-In the discussion section, the chapter builds on material explored in the literature to explore:
-
-- the development of agency in this learning design, Particular attention is given to processes which support learners to develop agency in the game making process.
-- design concepts to support novices learning coding in game making contexts.
+This chapter is concerned with examining the impact on participants of the learning design explored in the last chapter, excluding the more specific work on game design patterns which is explored in the following chapter. While there is an overarching theme of findings surrounding the inclusive methods that are introduce and which emerge, there is still a fair bit of work to do to make this chapter coherent.
 
 
-4### Commentary on chapter six - The Use of Gameplay Design Patterns "It’s like a project in itself, really"
+The first section examines the impact of a process drama with an aim to establish and nurture community practice. It highlights the value of introducing almost-real processes, near authentic tools and the possibility of learners developing learning identities within a drama frame. The second section examines the impact of core software tools in the initial learning design. Another section explores the community behaviour of the group of game makers and some of the specifics of their design processes. The processes include: emerging use of narratives and graphics which drawing on home funds of knowledge; playtesting as a social process; playtesting and embodied participation in the games of others; community concepts and norming behaviour emerging during playtesting; the development of flexible divisions of labour;
+
+
+In the discussion section, the chapter builds on material explored in this chapter in relation to exiting research to explore the development of agency in this learning design. Particular attention is given to processes which support learners to develop agency in the game making process and the role of different levels of authenticity within these processes.
+
+### Commentary on chapter six - The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
 Before exploring the contents of this chapter it is useful to insert an extract of the literature review to define game(play) design patterns (GDPs)
 
@@ -349,11 +345,11 @@ https://docs.google.com/document/d/1mbnV2pjT_7gq4Mcss8gQJ78avHktnA1P3HCJTkiJefk/
 
 INSERT IMAGE OF TABLE
 
-#### Extracted slides from Presentation
+#### Extracted slides from PGR conference presentation on Gdps as an intermediate level design construct
 
 The following bullet points are extracted from a presentation this summer for Manchester Games Network. They summarise key points on a discussion from the end of this chapter which explore the nature of GDPs as a practical design concept and link them to wider similar intermediate-level design concepts.
 
-**Gdps as an intermediate level design construct**
+_**Gdps as an intermediate level design construct**_
 
 - Design patterns are a form of "intermediate-level concept" as advocated by fellow researchers as a way of sharing results of research. Similarly, the implementation GDPs was the identification as a key unit of activity and analysis for this study, the justification being that it was at this level that richest use and development of tools and processes by the emerging community took place.
 
@@ -364,7 +360,7 @@ The following bullet points are extracted from a presentation this summer for Ma
 
 ## Concluding observations
 
-New directions. 
+New directions.
 
 ### Implications for designers and educators
 
