new version 6899 words

--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -360,9 +360,13 @@ _**Gdps as an intermediate level design construct**_
 
 ## Concluding observations
 
-New directions.
+I am compiling notes on the concluding chapter which will explore potential contributions to knowledge yielded by these findings, wider implications for educators and designers and limitations and future possible directions for this work.  
 
 ### Implications for designers and educators
+
+From the same presentation at PCR network I began to communicate some of the wider implication and potential for educators. I include the following slide.
+
+**_Implications for designers and educators_**
 
 - Design pattern collections could be useful to facilitate socially driven making.
 - Curated collections that draw on existing experiences of game play are particularly fertile grounds for inclusive and engaging practice.
@@ -371,7 +375,7 @@ New directions.
 - Facilitators can also let users be drawn by their interests and develop their own individual and community responses to the game making challenges.
 
 
-### Potential contribution to knowledge
+### Contributions to knowledge
 
 The key contributions include streams of practical contributions to help the process of learning and teaching coding and potential contributions to the field of understandings of agency in this learning context. Specifically the following concepts:
 
@@ -379,7 +383,7 @@ The key contributions include streams of practical contributions to help the pro
  - **A contribution to understandings of the specifics of family learning dynamics in digital making:** There is rich data to support detailed analysis in this area.
  -
 
-### Limitations of this study
+### Limitations of this study and future directions for related work
 
 The nature of this study as collaborative, emergent and focused lends itself to the kinds of results and contributions as outlined above rather than to
 
