--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -267,6 +267,15 @@ In addition during data analysis I used Rogoff's [-@rogoff_observing_1995-1] thr
 
 - Tidy up the work on Sannino etc
 
+**Methodology for exposing tensions**
+
+Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design.
+
+The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. TADS thus addresses transformative agency.
+
+In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools.
+
+
 #### Indentifying tensions and motivations
 
 CHAT relies on analysis of systemic tensions in activity and culture [@barab_using_2002]. Initial results relied on data analysis of my journal entries, informal interactions and formal interviews with participants, selection of key vignettes from video recordings and identification of the key features of the supporting resources and learning strategies that I created in response to emerging tensions. While the process of analysing tensions is still underway, I have included a link to emerging observations and responses in the appendix [^5].
@@ -293,23 +302,21 @@ The middle section gives an overview of the evolution of the learning design whi
 
 Due to the novel nature of the learning design the detailed outline of the evolution and specifics therein are also important to situate findings in the following two chapters.
 
-**Methodology for exposing tensions**
+An additional section examines the learning map element outlined in the 3M model above. This section explains the limitations of this study in this area giving a justification that the informal learning environment did not suit more abstract approach.
+EXPLAIN A BIT MORE.
 
-Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design.
 
-The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. TADS thus addresses transformative agency.
-
-In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools.
 
 
 
 ### Overview of chapter five - Seeding and Nurturing Game Making Communities to Facilitate Learner Agency
 
 
-This chapter is concerned with examining the impact on participants of the learning design explored in the last chapter, excluding the more specific work on game design patterns which is explored in the following chapter. While there is an overarching theme of findings surrounding the inclusive methods that are introduce and which emerge, there is still a fair bit of work to do to make this chapter coherent.
+This chapter is concerned with examining the impact on participants of the learning design explored in the last chapter, excluding the more specific work on game design patterns which is explored in the following chapter. While there is an overarching theme of findings surrounding the inclusive methods that are introduce and which emerge, there is still a fair bit of work to do to make the structure of this chapter coherent.
 
 
 The first section examines the impact of a process drama with an aim to establish and nurture community practice. It highlights the value of introducing almost-real processes, near authentic tools and the possibility of learners developing learning identities within a drama frame. The second section examines the impact of core software tools in the initial learning design. Another section explores the community behaviour of the group of game makers and some of the specifics of their design processes. The processes include: emerging use of narratives and graphics which drawing on home funds of knowledge; playtesting as a social process; playtesting and embodied participation in the games of others; community concepts and norming behaviour emerging during playtesting; the development of flexible divisions of labour;
+
 
 
 In the discussion section, the chapter builds on material explored in this chapter in relation to exiting research to explore the development of agency in this learning design. Particular attention is given to processes which support learners to develop agency in the game making process and the role of different levels of authenticity within these processes.
