--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -110,8 +110,6 @@ The result of this analysis and responses is the 3M model which is designed to b
 
 Many commercial open world games offer a central challenge consisting of small incremental missions and then optional side missions. Open world games increase user choice and thus give players a greater feeling of agency. To mirror this approach, the main challenge of the 3M model is to create a playable game around a theme for a real or imagined audience with learners given the choice to add many optional features to the game. This approach steers students towards developing their use and understanding of coding structures, debugging practices and systems concepts. In addition, side missions encourage social and playful coding approaches which help develop a community of coders.
 
-**Side Missions:** Bartle proposed that online gamers play games for different reasons and proposed an initial typology of gamers as socialiser, griefers, achievers and explorers [@hamari_player_2014]. You can find out what kind of game player you are with an online test.[^6] I propose there are also different styles of game makers. Some like to develop a full knowledge of the tools and what is possible before they build up their game step-by-step. Some are happy to borrow code, images and sound from anywhere for quick results. More sociable makers like to find out about the games of others or tell stories within games while others mess around with the code to break it interesting ways. To encourage these valuable social coding practices, I created extra missions which are available online.[^7] I avoid any claims of fixed learner types here and offer these interpretations primarily as a way to encourage meta-cognitive reflections and choice of activity in line with UDL principles.
-
 **Game Design Patterns as Main Missions:** Design patterns are most commonly used for computing students at higher education to teach object-oriented computing but they are also useful for all levels of learners. Design patterns are rooted in real-life incidences of problems that are often solved in a particular way. They are concrete examples of coding principles in context. Design patterns can help the development of coding communities if more experiences coders take the time to document the patterns they use in an accessible way for novice coders. For educators the use of design patterns can help support learners develop coding proficiency by providing scaffolding and modelling good design decisions. However, one of the challenges for teachers of using worked examples and design patterns is how to integrate them into student-led design challenges. In the 3M model rather than following a step-by-step tutorial learners start with an incomplete game template and add new features as they choose. Each feature is described as a mission. This approach follows the Use-Modify-Create model to limit learner anxiety for novice coders and to scaffold the acquisition of coding and computational thinking concepts [@lee_computational_2011]. I worked with learners to create a wish list of game features to create a 2D platform game. These features included moving hazards, jumping on enemies, finding a door or flag to progress to the next level. We can describe these features as game design patterns. Driven by the requests of learners, I developed tutorials to support students implement these patterns. This approach aligns with inclusive education principles in that it increases the choices of students, scaffolds the way they can access resources and allows them to keep a track of their own progress.
 
 <!-- You may be able to create a menu of printed or online patterns or examples that students can draw on as needed. Perhaps particularly common examples can be modelled to the whole class when it is clear that many students will benefit from that approach. -->
@@ -140,10 +138,7 @@ BOX ENDS
 
 In addition to outlines of game patterns, printouts or on-line documents to support learners to implement the code needed are provided. While on-line documents allow learners to copy and paste code thus avoid many syntax errors, printed or incomplete code examples provide a greater level of challenge. Supporting resources help resolve tensions around learners getting stuck and needing a lot of facilitator help. These resources can help teachers deliver game making in a classroom context. Educators can alter resources to vary how much detail is provided in supporting documents to suit the challenge level for students. I work with young coders and so I normally provide significant coding scaffolding. Once learners have built familiarity with code structures, processes, and the coding environment then I provide less complete code examples and thus reduce the scaffolding.
 
-
-
 ### Maps
-
 
 **Learning Dimensions Map:** In learning environments where there is a lot of choice assessing learners via observation is beneficial. Rather than deciding what you want to teach and testing students on that area, you can map the learning happening in an authentic activity. When researching hands-on tinkering in Science museums Bevan and Petrich [-@petrich_it_2013] worked with educators to examine video footage of families interacting with exhibits to make a structured list of the learning they observed. The resulting map of learning dimensions included underlying science concepts but also contained more general skills and helping behaviours involved in exploratory learning processes. Another chapter in this collection identified concept maps and observation as methods for teachers and researchers to identify key learning suited to particular computing projects. One of the outcomes of my research was to extract some of the concepts and practices that learners engaged with when making games from hours of recorded material. While some are common to existing Computational Thinking frameworks others, including systems thinking concepts, are more unique to game making. Table 1.1. shows my resulting map of learning dimensions for the 3M game making model.
 
@@ -233,13 +228,15 @@ In this chapter I have examined how game making fits an inclusive and project-ba
 One of the purposes of sharing my resources freely is to invite collaboration with educators and researchers in future work. The next stages of my research will involve a deeper look at how participants use the resources and provided to navigate their learning experience. I am also interested in widening the scope of the research beyond an exploratory, developmental stage to include comparative and quantitative studies that explore how this pedagogy compares to game making via a principles first / instruction-based approach.
 
 
-## Commentary on book chapter extract and its relationship to teh ongoing thesis
+## Commentary on book chapter extract and its relationship to the ongoing thesis
 
-While the book chapter above details two code authoring environments, the thesis concentrates on one of them (phaser and glitch.com).
+The the following observations on the different focus of the book chapter above and my ongoing thesis are of note:
 
-This was a difficult decision as while the choice of
+- The book chapter above details two code authoring environments, the thesis concentrates on one of them (phaser and glitch.com).
 
-The book chapter was based on observations of the pedagogy that emerged with much less of a focus on more detailed analysis of data. As such the focus is on tips for practitioners. It is useful at this point to outline the updated research questions which emerged from a closer analysis of the the collected data.  
+- The book chapter was based on observations of the pedagogy that emerged with much less of a focus on more detailed analysis of data. As such the focus is on tips for practitioners.
+
+It is relevant at this point to outline the updated research questions which emerged from a closer analysis of the the collected data.  
 
 **Research Questions - June 2023**
 
@@ -248,7 +245,7 @@ The book chapter was based on observations of the pedagogy that emerged with muc
 2. How can learners build agency in an evolving community of game makers?
 3. How can game design patterns support the development of coding practices with novices?
 
-These questions are more focused than previous interaions and contain an element of agency which emerges from a greater focus of the potential value of the learning design and closer readings of emerging themes in activity theory which have inspired me and to which I feel this research can contribute.
+<!-- These questions have become more focused. RQ 2's focus on agency which emerges from a greater focus on emerging themes in activity theory which have inspired me and to which I feel this research can contribute. -->
 
 
 ## Commentary on key chapters of the thesis
