--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -227,11 +227,12 @@ One of the purposes of sharing my resources freely is to invite collaboration wi
 
 ## Commentary on book chapter extract and its relationship to the ongoing thesis
 
-The the following observations on the different focus of the book chapter above and my ongoing thesis are of note:
+The the following observations on the different focus of the book chapter above and my ongoing thesis are of note. The book chapter:
 
-- The book chapter above details two code authoring environments, the thesis concentrates on one of them (phaser and glitch.com).
+- details two code authoring environments whereas the thesis concentrates on one of them (phaser and glitch.com).
+- is has a broader focus on practical pedagogy than the thesi swhic focuses on learner agency within a narrower context of family learning
+- takes a more simplistic view of tensions emerging in the learning environment
 
-- The book chapter was based on observations of the pedagogy that emerged with much less of a focus on more detailed analysis of data. As such the focus is on tips for practitioners.
 
 It is relevant at this point to outline the updated research questions which emerged from a closer analysis of the the collected data.  
 
@@ -253,21 +254,21 @@ I will outline the main premise of three main chapters that outline the key find
 
 ### Evolution of methodology
 
-The foundation of this research is a design-based research approach which is underlined by Activity Theory (AT) as a conceptual framework. Presenting emerging results within this extensive framework are complicated if trying to follow the prescriptive nature of 3GAT as a formative, developmental framework [@bakhurst_reflections_2009; @spinuzzi_trying_2020]. However there the use of broader interpretations of Activity theory as an underlying conceptual framework in used together with design-based research methodology and the elements of 3GAT to explore tensions and resolutions in emerging activity.
+During data analysis I used Rogoff's [-@rogoff_observing_1995-1] three planes / foci of personal, social and community to help focus and organise observational notes. The model which problematises the dichotomy of learner led, teacher led approaches [@mascolo_beyond_2009] suited the space between formal and informal learning that this community based model of game making occupies.
 
-In addition during data analysis I used Rogoff's [-@rogoff_observing_1995-1] three planes / foci of personal, social and community to help focus and organise observational notes. The model which problematises the dichotomy of learner led, teacher led approaches [@mascolo_beyond_2009] suited the space between formal and informal learning that this community based model of game making occupies.
+The foundation of this research is a design-based research approach which is underlined by Activity Theory (AT) as a conceptual framework.
 
-### Draft Extract from Methodology Chapter
+The use of activity theory as an underlying conceptual framework in used together with design-based research methodology and the elements of 3GAT to explore tensions and resolutions in emerging activity.
 
-- Tidy up the work on Sannino etc
+However presenting emerging results within this extensive framework are complicated if trying to follow the prescriptive nature of 3GAT as a formative, developmental framework [@bakhurst_reflections_2009; @spinuzzi_trying_2020].
 
-**Methodology for exposing tensions**
+I have drawn on research which distinguishes type of learner agency including transformative, authorial and instrumental agency.
 
 Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design.
 
 The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. TADS thus addresses transformative agency.
 
-In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools.
+
 
 
 #### Indentifying tensions and motivations
@@ -288,19 +289,14 @@ I also initially drew on design stages as a schema for coding. This proved usefu
 
 ### Commentary on chapter four - Emerging Learning Designs
 
-This chapter draws on review of literature and from four interviews with peer practitioners to exposes barriers to undertaking activity  this domain
-
-The middle section gives an overview of the evolution of the learning design which
-
-- draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
-
 Due to the novel nature of the learning design the detailed outline of the evolution and specifics therein are also important to situate findings in the following two chapters.
+
+This chapter draws on review of literature and from four interviews with peer practitioners to exposes barriers to digital making activity and tactics to overcome such barriers.
+
+The middle section gives an overview of the evolution of the learning design which draws on analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of emergent learning resources to present detailed exploration of key facilitator tensions and conflicts experienced by participant.  
 
 An additional section examines the learning map element outlined in the 3M model above. This section explains the limitations of this study in this area giving a justification that the informal learning environment did not suit more abstract approach.
 EXPLAIN A BIT MORE.
-
-
-
 
 
 ### Overview of chapter five - Seeding and Nurturing Game Making Communities to Facilitate Learner Agency
